[gd_scene load_steps=8 format=3 uid="uid://bpi7ggvfe5uhq"]

[ext_resource type="Script" path="res://src/components/editors/local/local_editors.gd" id="1_uc0j8"]
[ext_resource type="PackedScene" uid="uid://datb5j88oompr" path="res://src/components/editors/local/editors_list/editors_list.tscn" id="2_a50s0"]
[ext_resource type="PackedScene" uid="uid://cetwb5xs7wck5" path="res://src/components/editors/local/editor_import/editor_import.tscn" id="2_t30qe"]
[ext_resource type="PackedScene" uid="uid://cuuiumge42ghh" path="res://src/components/actions_sidebar/actions_sidebar.tscn" id="3_kugpf"]
[ext_resource type="Script" path="res://src/components/misc/remove_missing_button.gd" id="4_7gmpr"]
[ext_resource type="PackedScene" uid="uid://bgs8c8ed7oww1" path="res://src/components/editors/local/orphan_editor_explorer/orphan_editor_explorer.tscn" id="4_nupsx"]
[ext_resource type="Script" path="res://src/components/misc/scan_file_dialog.gd" id="7_ejkq8"]

[node name="Editors" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uc0j8")

[node name="EditorsList" parent="." instance=ExtResource("2_a50s0")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ImportButton" type="Button" parent="EditorsList/HBoxContainer/TabActions" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "Import"

[node name="DownloadButton" type="Button" parent="EditorsList/HBoxContainer/TabActions" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Download"

[node name="OrphanEditorsButton" type="Button" parent="EditorsList/HBoxContainer/TabActions" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Orphan"

[node name="ScanButton" type="Button" parent="EditorsList/HBoxContainer/TabActions" index="3"]
unique_name_in_owner = true
layout_mode = 2
text = "Scan"

[node name="RefreshButton" type="Button" parent="EditorsList/HBoxContainer/TabActions" index="4"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"

[node name="SortOptionButton" parent="EditorsList/HBoxContainer/HBoxContainer" index="1"]
size_flags_horizontal = 3

[node name="ActionsSidebar" parent="EditorsList/HBoxContainer2/VBoxContainer/SidebarContainer" index="0" instance=ExtResource("3_kugpf")]
unique_name_in_owner = true
layout_mode = 2

[node name="RemoveMissingButton" type="Button" parent="EditorsList/HBoxContainer2/VBoxContainer/SidebarContainer/ActionsSidebar/RestActions" index="0"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_7gmpr")

[node name="EditorImport" parent="." instance=ExtResource("2_t30qe")]
unique_name_in_owner = true
visible = false

[node name="OrphanEditorExplorer" parent="." instance=ExtResource("4_nupsx")]
unique_name_in_owner = true
visible = false

[node name="ScanDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
script = ExtResource("7_ejkq8")

[connection signal="item_edited" from="EditorsList" to="." method="_on_editors_list_item_edited"]
[connection signal="item_manage_tags_requested" from="EditorsList" to="." method="_on_editors_list_item_manage_tags_requested"]
[connection signal="item_removed" from="EditorsList" to="." method="_on_editors_list_item_removed"]
[connection signal="item_selected" from="EditorsList" to="." method="_on_editors_list_item_selected"]

[editable path="EditorsList"]
[editable path="EditorsList/HBoxContainer2/VBoxContainer/SidebarContainer/ActionsSidebar"]
